--- a/04 NLP/RNN IO Shapes.ipynb
+++ b/04 NLP/RNN IO Shapes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4a94b594-a442-4417-8507-a8bc9a1e5545",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "aee3df1a-7223-4ac2-9791-109130fdc787",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Input, Dense, SimpleRNN"
+    "from tensorflow.keras.layers import SimpleRNN"
    ]
   },
   {
@@ -33,7 +32,7 @@
     "tags": []
    },
    "source": [
-    "# RNN Example"
+    "# RNN IO Shapes"
    ]
   },
   {
@@ -49,15 +48,15 @@
     "\n",
     "\n",
     "Notes:\n",
-    "- All sentences (corpus) is 1000.\n",
-    "- The batch size is 32. 32 sentences are processesd before GD update (?).\n",
-    "- Each senstence consists of words, max sentence len 10.\n",
-    "- Each word is represented as 8x1 vector (aka num of features is 8)."
+    "- All sentences (=corpus) is 1000. One sentence = one document.\n",
+    "- The batch size is 32. 32 sentences of all 1000 are processesd before GD update. `batchsize=32`\n",
+    "- Each senstence consists of words, max sentence len 10. `timestep=sequence=10`\n",
+    "- Each word is represented as 8x1 vector (that is the num of features is 8). `features=8` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5397b553-e54d-413e-bcfe-5ea27611df82",
    "metadata": {},
    "outputs": [
@@ -67,7 +66,7 @@
        "(32, 10, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,31 +77,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "48ae7d15-6da0-434a-ab00-f42c225f4c6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the rnn layer\n",
-    "simple_rnn = tf.keras.layers.SimpleRNN(4)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3efdcf20-ffd1-4500-a50f-dcf6e835cdb4",
    "metadata": {},
    "source": [
     "- The layer has 4 units (neurons).\n",
     "- Each unit produces a single number on each time step (=when a word is 'fed').\n",
-    "- The steps are equal to either the len(sentence) e.g. in #1 -> 6, OR max 10 steps.\n",
-    "- However, the defalt layer return only the latest values for each of the 32 sentences.\n",
-    "- Thus, the output shape is 32 sentences (in the batch) * 4 values (one from each unit in the `SimpleRNN` layer)."
+    "- The steps are equal the length of the sequence/sentence. However, the max length is 10 (the remaining words are not used).\n",
+    "- By the default settings, only the latest values for each of the 32 sentences is returned -> the output shape is 32 sentences (in the batch) * 4 values (one from each unit in the `SimpleRNN` layer)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4241c866-ae08-43a6-87b1-b113df36da42",
    "metadata": {},
    "outputs": [
@@ -112,12 +99,13 @@
        "TensorShape([32, 4])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "simple_rnn = SimpleRNN(units=4)\n",
     "output = simple_rnn(inputs)\n",
     "output.shape"
    ]
@@ -127,12 +115,12 @@
    "id": "3d57b071-b713-4b6f-b71b-f860bb139ac3",
    "metadata": {},
    "source": [
-    "- We can get the outputs after each word as below:"
+    "We can get the outputs after each word, each element/token of the sequence as below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b0b4a65b-e93b-4f3d-8597-26b7a93c4722",
    "metadata": {},
    "outputs": [
@@ -142,15 +130,13 @@
        "TensorShape([32, 10, 4])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simple_rnn = tf.keras.layers.SimpleRNN(\n",
-    "    4, return_sequences=True)\n",
-    "\n",
+    "simple_rnn = SimpleRNN(4, return_sequences=True)\n",
     "simple_rnn(inputs).shape"
    ]
   }
@@ -171,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
