--- a/04-nlp/Basic Text Classification - part 1.ipynb
+++ b/04-nlp/Basic Text Classification - part 1.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "90cc2833-00a2-4ef8-8196-988dfa5a7a2e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -14,7 +18,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "737df90e-20d5-4f91-b553-81ec66aba1be",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -57,117 +66,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "3748108a-24df-460f-8393-0efd36a91740",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "240f78e8-3fba-4640-b92d-aab41b3edd16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def most_common_word(words):\n",
-    "    word_counts = Counter(words)\n",
-    "    return word_counts\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3e0d03a-b968-42ae-b616-e314c1828e0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "9122c51d-6025-4088-aa4b-cd2aec09840c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('hello', 3)]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Counter(['hello', 'world', 'hello', 'goodbye', 'hello']).most_common(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "26f68803-265c-4c69-b1af-ed0bc8602826",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "# test the function\n",
-    "print(most_common_word(['hello', 'world', 'hello', 'goodbye', 'hello']))  # prints 'hello'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "da74bc05-4742-4383-b807-fbaf94195971",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'word_counts' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4908\\1599599241.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mword_counts\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'word_counts' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "word_counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ee11063-4e1b-4eac-be38-55c97a8b0cb2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for a, b for zip(list_a, list_b):\n",
-    "    p"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "950fe39c-cf46-4acf-aa4e-d592955df253",
    "metadata": {
     "tags": []
    },
    "source": [
-    "Task: classify IMDB movie reviews as positive or negative, based on the text of the review.\n",
+    "Task: classify IMDB **movie reviews** as positive or negative, based on the text of the review.\n",
     "\n",
     "Dataset:\n",
     "- from [here](https://ai.stanford.edu/~amaas/data/sentiment/)\n",
@@ -181,20 +86,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "fa1d18d1-e9dc-4fe2-ba24-dd29ad242dd6",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def download_data():\n",
     "    \"\"\"Downloads the data in the current folder and return the `dataset_dir`.\"\"\"\n",
     "    \n",
     "    url = \"https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\"\n",
-    "\n",
-    "    dataset = tf.keras.utils.get_file(\"aclImdb_v1\", url,\n",
-    "                                        untar=True, cache_dir='.',\n",
-    "                                        cache_subdir='')\n",
-    "\n",
+    "    dataset = tf.keras.utils.get_file(\"aclImdb_v1\", url, untar=True, cache_dir='.', cache_subdir='')\n",
     "    dataset_dir = os.path.join(os.path.dirname(dataset), 'aclImdb')\n",
-    "    \n",
     "    return dataset_dir"
    ]
   },
@@ -202,7 +106,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fe4dcacb-a29d-48b7-94ef-55758461235d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -216,9 +124,8 @@
     }
    ],
    "source": [
-    "# Data is already download on the Desktop\n",
+    "# Data is already download on the Desktop.\n",
     "dataset_dir = Path().home() / r'Desktop\\datasets\\aclImdb'\n",
-    "\n",
     "dataset_dir.exists()"
    ]
   },
@@ -226,7 +133,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0c9708e0-456e-41c1-ad81-496ac1b0d241",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -240,6 +151,7 @@
     }
    ],
    "source": [
+    "# Content of the dataset folder.\n",
     "[obj.name for obj in dataset_dir.glob('*')]"
    ]
   },
@@ -247,7 +159,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "633b3889-7615-44f4-bdba-7768f86e4308",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -261,9 +177,9 @@
     }
    ],
    "source": [
+    "# Define train and test folders and verify they exist.\n",
     "train_dir = dataset_dir / 'train'\n",
     "test_dir = dataset_dir / 'test'\n",
-    "\n",
     "train_dir.exists(), test_dir.exists()"
    ]
   },
@@ -271,7 +187,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "53429547-0383-4c5c-8402-f03ca1eae04d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -282,6 +203,7 @@
     }
    ],
    "source": [
+    "# Print out a sample movie review.\n",
     "sample_file = train_dir / 'neg' / '5_3.txt'\n",
     "with open(sample_file) as f:\n",
     "    print(f.read())"
@@ -301,7 +223,12 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "05c90240-6de0-432a-8638-5fcf445ce5a8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -321,16 +248,20 @@
     }
    ],
    "source": [
-    "# List file and folders in train dir\n",
-    "\n",
+    "# List the content of the train folder.\n",
     "[obj.name for obj in train_dir.glob('*')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "379b8216-f540-44f0-b62a-c3c1727bc595",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -344,25 +275,27 @@
        " 'urls_unsup.txt']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove not-used dirs if needed. Only 'neg' and 'pos' shall remain.\n",
+    "# Delete unused folders if needed. Only 'neg' and 'pos' folders shall remain.\n",
     "def remove_unneccessary_dirs():\n",
     "    remove_dir = os.path.join(str(train_dir), 'unsup')\n",
     "    shutil.rmtree(remove_dir)\n",
-    "\n",
+    "`\n",
     "[obj.name for obj in train_dir.glob('*')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "1d3be3f3-858c-404f-ab53-50f8b4beef20",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -374,6 +307,7 @@
     }
    ],
    "source": [
+    "# Create tf dataset for training.\n",
     "batch_size = 32\n",
     "seed = 42\n",
     "\n",
@@ -387,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "87bb5f6d-06ed-47bf-ad6d-849b674fa319",
    "metadata": {
     "tags": []
@@ -407,6 +341,7 @@
     }
    ],
    "source": [
+    "# Take a sample batch and print several of the reviews inside and their labels.\n",
     "for text_batch, label_batch in raw_train_ds.take(1):\n",
     "    for i in range(3):\n",
     "        print(\"Review\", text_batch.numpy()[i])\n",
@@ -415,9 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "5195ad51-4ada-4948-a794-73f172d83ae9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -429,6 +368,7 @@
     }
    ],
    "source": [
+    "# Print out the meanings of the two labels.\n",
     "print(\"Label 0 corresponds to\", raw_train_ds.class_names[0])\n",
     "print(\"Label 1 corresponds to\", raw_train_ds.class_names[1])"
    ]
@@ -437,7 +377,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "3235d6fa-c5b7-4572-94df-292388d7cfb0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -449,6 +391,7 @@
     }
    ],
    "source": [
+    "\n",
     "raw_val_ds = text_dataset_from_directory(\n",
     "    directory=train_dir.as_posix(), \n",
     "    batch_size=batch_size, \n",
@@ -461,7 +404,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "d05a01e9-e5b3-4f95-a7a5-82eeddf77d16",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -489,11 +434,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "21f37316-4ac2-4a11-b95c-c7b96a902111",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "# Implement preprocessing function to apply over every movie review.\n",
+    "\n",
     "def custom_standardization(input_data):\n",
     "    lowercase = tf.strings.lower(input_data)\n",
     "    stripped_html = tf.strings.regex_replace(lowercase, '<br />', ' ')\n",
@@ -506,7 +455,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "b8d736b7-cdd6-4aa4-a379-7f017ae67607",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "max_features = 10000\n",
@@ -523,7 +474,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "607aae3c-56e2-4f76-8515-4c1cf027eb95",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -547,7 +500,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "adb5b8c4-3703-4b36-bdf8-1f2ff0410216",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# need to add a dimension to vectorize\n",
@@ -613,7 +568,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "66e2feed-664e-425f-bf1f-0a9bbf86fd50",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -635,7 +592,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "4c13d8b7-1e6f-4602-bffb-ad5566312df1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Create the final datasets by\n",
@@ -660,7 +619,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "60a86980-700c-46af-9750-e41638f16944",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "AUTOTUNE = tf.data.AUTOTUNE\n",
@@ -688,7 +649,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "dfd9c214-5f40-4d6d-b3b9-1b7f124c6478",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -748,7 +711,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "587c0009-a922-4933-b0a8-86f8c00afb28",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "model.compile(loss=BinaryCrossentropy(from_logits=True),\n",
@@ -814,7 +781,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "0c75e2a5-ebbe-4628-ba77-880e69ac9dc7",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -848,7 +819,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "36e97ef2-a46d-4e03-9799-75ab218bd2f9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -895,7 +870,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "d18d0d45-04e4-4c86-b654-d1b99d3a754e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -932,7 +911,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "d6596a1f-4b29-4713-8241-17273534c226",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -954,7 +937,11 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "83b82ddb-8b08-422e-9696-4e9744521f56",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -989,7 +976,11 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "00ac9d59-bb6d-49e5-97ba-577b710f4c03",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1029,7 +1020,11 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "c770386a-0dd1-43b6-8ca2-db5b8d11be44",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1070,7 +1065,11 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "3771b4a9-da43-4c8f-a299-9159210cbd4f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
