updated nlp notebooks

--- a/04-nlp/Basic Text Classification - part 1.ipynb
+++ b/04-nlp/Basic Text Classification - part 1.ipynb
@@ -712,9 +712,7 @@
    "execution_count": 27,
    "id": "587c0009-a922-4933-b0a8-86f8c00afb28",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -782,9 +780,7 @@
    "execution_count": 29,
    "id": "0c75e2a5-ebbe-4628-ba77-880e69ac9dc7",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -820,9 +816,7 @@
    "execution_count": 30,
    "id": "36e97ef2-a46d-4e03-9799-75ab218bd2f9",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
