--- a/04-nlp/Basic Text Classification (repeat).ipynb
+++ b/04-nlp/Basic Text Classification (repeat).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5916d5af-0811-4865-a229-37de3ff37bdd",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "8d248a1c-4bb2-414c-84e9-14b30ee3ff73",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,9 @@
     "tags": []
    },
    "source": [
-    "# Basic Text Classification (repeat)"
+    "# Basic Text Classification (repeat)\n",
+    "\n",
+    "Класификация на отзиви за филми - положителен или отрицателен отзив."
    ]
   },
   {
@@ -52,35 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "00922df7-5be0-40a4-8a06-09a3383e56c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "SEED = 123\n",
     "BATCH_SIZE = 32\n",
     "MAX_TOKENS = 10_000  # the number of unique words (and ngrams) in the dictionary (vocabulary) will be max 10K\n",
     "OUTPUT_SEQUENCE_LENGTH = 250  # each int encoding of a text will contain exactly 250 numbers\n",
-    "AUTOTUNE = tf.data.AUTOTUNE\n",
-    "display(AUTOTUNE)"
+    "AUTOTUNE = tf.data.AUTOTUNE"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6f8a7730-cd42-42ac-9cd0-aabd2f38deab",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
-    "## Load the dataset"
+    "## Open directory"
    ]
   },
   {
@@ -93,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0e1455ae-be07-4309-8e52-2b87f43d6704",
    "metadata": {},
    "outputs": [
@@ -103,7 +96,7 @@
        "['imdb.vocab', 'imdbEr.txt', 'README', 'test', 'train']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,6 +112,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3a289f2-0840-48ce-94e5-7358e1d0bf17",
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "## Explore data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c6039d0-c7e7-44b2-833e-56343df7d824",
    "metadata": {},
    "source": [
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ab70678b-73a1-4e23-830c-bea44065e711",
    "metadata": {},
    "outputs": [
@@ -150,12 +154,12 @@
    "id": "c6e237ca-bd12-4f48-b22d-9635d16396c6",
    "metadata": {},
    "source": [
-    "### Sample review."
+    "### Sample review. Случаен отзив."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "960b1d6e-ced0-4e29-909d-489f3eb1aee2",
    "metadata": {},
    "outputs": [
@@ -176,6 +180,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2890d54e-def4-4e58-be3a-8a090aba285c",
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "## Create datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c205926-38e5-4510-abed-efe4c9630de4",
    "metadata": {},
    "source": [
@@ -184,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4f5c2da0-9c34-4ab0-bbd0-518de43b8c62",
    "metadata": {},
    "outputs": [],
@@ -203,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "ace9f74e-b773-45c3-94f3-203b681549c6",
    "metadata": {},
    "outputs": [
@@ -223,7 +238,7 @@
        " <BatchDataset element_spec=(TensorSpec(shape=(None,), dtype=tf.string, name=None), TensorSpec(shape=(None,), dtype=tf.int32, name=None))>)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "f46b90e2-4e63-4918-9d21-f7b9d1936c5c",
    "metadata": {},
    "outputs": [
@@ -264,7 +279,7 @@
        "(20000, 5024)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,12 +296,14 @@
    "id": "e8a1bc36-043b-4b77-b0cb-a15e70459560",
    "metadata": {},
    "source": [
-    "### Test: sample review."
+    "### Test: sample review.\n",
+    "\n",
+    "Случаен отзив и неговия клас."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "553c5fa7-3706-45b2-af2b-1eb5290e7361",
    "metadata": {},
    "outputs": [
@@ -316,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "c994d89b-cfbe-4313-ba2f-ad9cc6177e68",
    "metadata": {},
    "outputs": [
@@ -354,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "69179ebd-830d-4ec2-8567-9f644a02ee97",
    "metadata": {},
    "outputs": [
@@ -364,7 +381,7 @@
        "['neg', 'pos']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +393,9 @@
   {
    "cell_type": "markdown",
    "id": "ed27fb19-2f7c-4d85-9da0-9e042369c9fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Prepare the dataset for training"
    ]
@@ -387,12 +406,17 @@
    "metadata": {},
    "source": [
     "### Preprocessing\n",
-    "Implement a function to clean each review."
+    "Implement a function to clean each review.\n",
+    "\n",
+    "3 стъпки:\n",
+    "1. всички букви -> малки\n",
+    "1. махаме хтмл тагове\n",
+    "1. махаме пунктуационни знаци"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "ccd7bba3-9cec-47cd-b93f-f9079145dba2",
    "metadata": {},
    "outputs": [
@@ -427,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "e39fcedc-7b92-4274-a2df-9e0297ec1686",
    "metadata": {},
    "outputs": [],
@@ -453,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "a7b06218-cb40-4585-9e80-29bcfeca557c",
    "metadata": {},
    "outputs": [
@@ -463,7 +487,7 @@
        "<BatchDataset element_spec=(TensorSpec(shape=(None,), dtype=tf.string, name=None), TensorSpec(shape=(None,), dtype=tf.int32, name=None))>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "acd53f9e-c113-45a8-ba8a-d7b4758cc5e2",
    "metadata": {},
    "outputs": [
@@ -489,8 +513,7 @@
     }
    ],
    "source": [
-    "train_data = raw_training_ds.map(lambda review, label: review)\n",
-    "# train_labels = raw_training_ds.map(lambda review, label: review)"
+    "train_data = raw_training_ds.map(lambda review, label: review)\n"
    ]
   },
   {
@@ -506,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "496f5bfa-7112-4f8e-bf53-97b206f22be5",
    "metadata": {},
    "outputs": [
@@ -516,7 +539,7 @@
        "['', '[UNK]', 'the', 'and', 'a', 'of', 'to', 'is', 'in', 'it']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "3b9b489e-1344-4911-9f3f-72789fdc2f27",
    "metadata": {},
    "outputs": [
@@ -604,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "e3d854a3-7126-44a4-a03f-8357c9f249ed",
    "metadata": {
     "tags": []
@@ -664,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "a68e08c7-134b-4588-a7f4-0136af04f374",
    "metadata": {},
    "outputs": [
@@ -684,7 +707,7 @@
        "        0, 0, 1, 0, 0, 0, 0, 0, 1, 1])>)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "43369576-fc9b-4b2c-bbd7-d5776363496e",
    "metadata": {},
    "outputs": [],
@@ -724,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "id": "edcfa7fc-a52b-46d5-9d9e-1fb5a1f0e4ce",
    "metadata": {},
    "outputs": [
@@ -732,13 +755,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_3 (Embedding)     (None, None, 16)          160016    \n",
+      " embedding_1 (Embedding)     (None, None, 16)          160016    \n",
       "                                                                 \n",
-      " global_average_pooling1d_2   (None, 16)               0         \n",
+      " global_average_pooling1d_1   (None, 16)               0         \n",
       " (GlobalAveragePooling1D)                                        \n",
       "                                                                 \n",
       " dense_1 (Dense)             (None, 1)                 17        \n",
@@ -807,7 +830,9 @@
    "id": "016bbb92-ee9c-4cba-b7f9-8ee44e9d560a",
    "metadata": {},
    "source": [
-    "## Train the model"
+    "## Train the model\n",
+    "\n",
+    "Обучаваме модела."
    ]
   },
   {
