created several code snippets; updated examp prep

--- a/04-nlp/Amazon Customer Reviews.ipynb
+++ b/04-nlp/Amazon Customer Reviews.ipynb
@@ -40,7 +40,7 @@
     "tags": []
    },
    "source": [
-    "# Title"
+    "# Amazon Customer Reviews"
    ]
   },
   {
@@ -321,7 +321,18 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1604ded1-e116-4c03-b826-fb8b406fa889",
+   "id": "9295bc8c-9271-43ce-a592-e090436bc804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_amazon_reviews(df):\n",
+    "    return train_test_split(df.review, df.sentiment, test_size=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "43f68be3-6f80-44ef-b46e-f38961c33888",
    "metadata": {},
    "outputs": [
     {
@@ -336,10 +347,6 @@
     }
    ],
    "source": [
-    "def split_amazon_reviews(df):\n",
-    "    return train_test_split(df.review, df.sentiment, test_size=0.1)\n",
-    "\n",
-    "\n",
     "attributes_train, attributes_test, labels_train, labels_test = (amazon\n",
     "                                                                .pipe(tweak_amazon_reviews)\n",
     "                                                                .pipe(split_amazon_reviews)\n",
@@ -1078,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
