changed several filenames

--- a/03-images/Natural Images Dataset.ipynb
+++ b/03-images/Natural Images Dataset.ipynb
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "images = generator.flow_from_directory(nature_dir)"
+    "images= generator.flow_from_directory(nature_dir)"
    ]
   },
   {
@@ -493,7 +493,13 @@
    "cell_type": "code",
    "execution_count": 142,
    "id": "dc6c712f-611a-480c-a6c4-935ead852cb3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -644,6 +650,10 @@
    "execution_count": 145,
    "id": "c8b6bdf9-e815-4f0e-bd7d-6257fcf334cf",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -701,6 +711,10 @@
    "execution_count": 148,
    "id": "2f2ad0a1-4870-4260-b60f-ed7c0d9b0d65",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1122,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.10"
   },
   "toc-showcode": false,
   "toc-showmarkdowntxt": false
